--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "package-json-to-readme",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Generate a README.md from package.json contents",
   "main": "index.js",
   "usage": {
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/zeke/package-json-to-readme",
   "dependencies": {
     "hogan.js": "^2.0.0",
+    "minimist": "^0.1.0",
     "github-url-to-object": "^0.5.3"
   },
   "bin": {
