--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "homepage": "https://github.com/zeke/package-json-to-readme",
   "dependencies": {
+    "exec-sync": "^0.1.6",
+    "github-url-to-object": "^0.5.3",
     "hogan.js": "^2.0.0",
     "minimist": "^0.1.0",
-    "github-url-to-object": "^0.5.3"
+    "strip-ansi": "^0.2.2"
   },
   "bin": {
     "package-json-to-readme": "index.js",
