--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "dependencies": {
     "github-url-to-object": "^0.5.3",
     "hogan.js": "^2.0.0",
-    "shelljs": "^0.3.0",
     "strip-ansi": "^0.2.2",
+    "sync-exec": "^0.5.0",
     "yargs": "^3.0.4"
   },
   "bin": {
