set up semantic-release

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "package-json-to-readme",
-  "version": "2.0.0",
+  "version": "0.0.0-development",
   "description": "Generate a README.md from package.json contents",
   "main": "index.js",
   "scripts": {
-    "test": "mocha && standard"
+    "test": "mocha && standard",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": "https://github.com/zeke/package-json-to-readme",
   "keywords": [
@@ -31,7 +32,8 @@
   "devDependencies": {
     "mocha": "^2.1.0",
     "nixt": "^0.3.0",
-    "standard": "^8.6.0"
+    "standard": "^8.6.0",
+    "semantic-release": "^8.2.0"
   },
   "standard": {
     "env": {
