set up semantic release

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,9 @@ cache:
 notifications:
   email: false
 node_js:
-  - '9'
   - '8'
-  - '6'
-  - '4'
 after_success:
-  - npm run semantic-release
+  - npm run travis-deploy-once "npm run semantic-release"
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
