--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "package-json-to-readme",
-  "version": "0.0.0-development",
+  "version": "0.0.0",
   "description": "Generate a README.md from package.json contents",
   "main": "index.js",
   "scripts": {
